[package]
name = "lab4"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
tungstenite = "0.24.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = "1.0"
serde_json = "1.0"
bcrypt = "0.16.0"
tokio-tungstenite = "0.24.0"
serde_derive = "1.0"
futures-util = "0.3.31"
tokio-stream = "0.1.17"
futures = "0.3.31"
axum = "0.7.9"
tower-http = "0.6.2"